
v1.7.29:
 - Feature: add OpenSSL based NativeTlsPort server

v1.7.28:
 - BUG FIX: fix server ingress net acl check for traffic from extra tls ports
 - Feature: support PROXY Protocol v1 in PlainTcpPort and PlainTlsPort
 - Feature: support PROXY Protocol in IntelliProxy port

v1.7.27:
 - Optimization: set default c-ares init options as c-ares 1.20.1 default values
 - Optimization: reduce rustls server session cache lock contention
 - Feature: rename trust-dns resolver type to hickory to be sync with upstream
 - Feature: add dns over http/3 support in hickory resolver
 - Feature: use tcp peer ip if socks5 proxy returns unspecified udp peer ip

v1.7.26:
 - BUG FIX: fix deb and rpm build scripts
 - BUG FIX: fix parse of cert_pairs of tls server config in various servers

v1.7.25:
 - Feature: add route_geoip escaper
 - Feature: various improvements to journal logging
     - add SYSLOG_IDENTIFIER field
     - improved efficiency
     - io stats added
 - Feature: update vendored openssl to 3.1

v1.7.24:
 - BUG FIX: fix vendoring build of ring

v1.7.23:
 - Feature: allow to use ID string as egress path json value in DirectFloat and ProxyFloat escaper
 - Feature: add vendored-c-ares feature to set if enable source compile of c-ares
 - Feature: drop out of date dependencies by using forks and patches

v1.7.22:
 - Removed: remove the daemon group name setting in config file
 - BUG FIX: fix site level socks_tcp_connect conn_total stats
 - BUG FIX: fix logger io stats in various AsyncLogger backends
 - Feature: support udp methods in ProxyFloat socks5 proxy peer
 - Feature: support udp methods in DirectFloat escaper
 - Feature: allow to use json value for egress path selection
     - allow to set at user level
     - support at ProxyFloat / DirectFloat / RouteSelect escaper
     - make source config in ProxyFloat escaper optional
 - Feature: allow to publish dynamic users
 - Feature: default to guess main config file when run as systemd service

v1.7.21: